# ara-framework

./: .gitignore  ANALISIS_REPOSITORIO_COMPLETO.md  EVALUACION_MODELOS_OLLAMA.md  LICENSE  README.md  RESUMEN_EJECUTIVO.md  RESUMEN_OLLAMA.md  test_ollama_tools.py
ara_framework/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ara_framework/.speckit/: constitution.md  plan.md  specifications.md  tasks.md
ara_framework/agents/: __init__.py  content_synthesizer.py  implementation_specialist.py  literature_researcher.py  niche_analyst.py  orchestrator.py  technical_architect.py
ara_framework/config/: settings.py
ara_framework/core/: agent_utils.py  model_factory.py  pipeline.py  pipeline.py.backup
ara_framework/graphs/: __init__.py  research_graph.py
ara_framework/mcp_servers/: playwright_mcp.py  semantic_scholar.py
ara_framework/tests/: test_budget_manager_OLD.py  test_langgraph.py  test_pipeline.py  test_tools_OLD.py
ara_framework/tools/: __init__.py  database_tool.py  pdf_tool.py  scraping_tool.py  search_tool.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  LANGGRAPH_EXPLICACION.md  README.md
docs/migration/: MIGRATION_COMPLETE.md  (+1 more)
frontend/: FRONTEND_COMPLETADO.md  PROBLEMA_SOLUCIONADO.md  README.md  index.html  tailwind.config.js  vite.config.ts
investigacion_perplexity/: ara_framework_config.yml  escenarios_costos.csv  pricing_comparativo_nov2025.csv
investigación perplexity/: analisis_haiku_cursor.md  benchmarks_modelos_nov2025.csv  indice_deliverables.md  resumen_ejecutivo.md  script.py  script_1.py
(+34 files in other folders)
